--- a/.github/workflows/docker-work.yml
+++ b/.github/workflows/docker-work.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Sprawdzenie repo
+    - name: Check the repo
       uses: actions/checkout@v2
 
-    - name: Zbuduj obraz Docker
-      run: docker build -t goldarian/lab12:latest .
+    - name: Build Docker image
+      run: docker build -t nadzeyas/lab14:latest .
 
-    - name: Zaloguj do DockerHub
-      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Login to DockerHub
+      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TOKEN }}
 
-    - name: Przepchnij obraz Docker
+    - name: Push Docker image
       run: docker push nadzeyas/lab14:latest
