--- a/.github/workflows/docker-work.yml
+++ b/.github/workflows/docker-work.yml
@@ -16,6 +16,11 @@ jobs:
       - name: Check the repo
         uses: actions/checkout@v2
 
+      - name: Enable BuildKit
+        run: |
+          echo '{"features":{"buildkit": true}}' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
+
       - name: Build Docker image
         run: docker build -t nadzeyas/lab14:${{ github.sha }} .
 
